<resources>
    <string name="app_name">Ride Bart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_datetime">Depart at</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="from">Origin</string>
    <string name="to">Destination</string>
    <string name="schedule">ITINERARY</string>
    <string name="info">GUIDE</string>
    <string name="advisory">Advisory</string>
    <string name="elevator">Elevator Status</string>
    <string name="count">Train Count</string>
    <string name="holiday">Holidays</string>
    <string name="map">Transit Map</string>

    <color name="yellow">#f6fa50</color>

        <string-array name="station">
            <item>Select a Station</item>
            <item>12th St. Oakland City Center</item>
            <item>16th St. Mission (SF)</item>
            <item>19th St. Oakland</item>
            <item>24th St. Mission (SF)</item>
            <item>Ashby (Berkeley)</item>
            <item>Balboa Park (SF)</item>
            <item>Bay Fair (San Leandro)</item>
            <item>Castro Valley</item>
            <item>Civic Center/UN Plaza (SF)</item>
            <item>Coliseum</item>
            <item>Colma</item>
            <item>Concord</item>
            <item>Daly City</item>
            <item>Downtown Berkeley</item>
            <item>Dublin/Pleasanton</item>
            <item>El Cerrito del Norte</item>
            <item>El Cerrito Plaza</item>
            <item>Embarcadero (SF)</item>
            <item>Fremont</item>
            <item>Fruitvale (Oakland)</item>
            <item>Glen Park (SF)</item>
            <item>Hayward</item>
            <item>Lafayette</item>
            <item>Lake Merritt (Oakland)</item>
            <item>MacArthur (Oakland)</item>
            <item>Millbrae</item>
            <item>Montgomery St. (SF)</item>
            <item>North Berkeley</item>
            <item>North Concord/Martinez</item>
            <item>Oakland Int\'l Airport</item>
            <item>Orinda</item>
            <item>Pittsburg/Bay Point</item>
            <item>Pleasant Hill/Contra Costa Center</item>
            <item>Powell St. (SF)</item>
            <item>Richmond </item>
            <item>Rockridge (Oakland)</item>
            <item>San Bruno</item>
            <item>San Francisco Int\'l Airport</item>
            <item>San Leandro</item>
            <item>South Hayward</item>
            <item>South San Francisco</item>
            <item>Union City</item>
            <item>Walnut Creek</item>
            <item>Warm Springs / South Fremont</item>
            <item>West Dublin/Pleasanton</item>
            <item>West Oakland</item>
        </string-array>
    <string name="title_activity_holiday_list">Holiday List</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="title_activity_map">Transit Map</string>
    <string name="station">Select Station</string>
    <string name="title_activity_station_info">Station Info</string>
    <string name="parking_fill_info">Estimated Parking Fill Time</string>
    <string name="parking">Parking</string>
    <string name="bike">Bikes</string>
    <string name="bike_racks">Bike Racks</string>
    <string name="bike_station">Bike Station</string>
    <string name="bike_lockers">Bike Lockers</string>
    <string name="transit_info">Connecting Transit Routes</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bart_blue_sky">BART Blue Sky</string>
    <string name="depart_time">Time</string>
    <string name="depart_now">Depart Now</string>
    <string name="title_activity_saved_trip">Saved Trips</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="delete">DELETE</string>
    <string name="select">SELECT</string>
    <string name="saved_trip">Saved Trips</string>
    <string name="fare">Fare</string>
    <string name="travel_duration">Travel Duration</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_route_detail">RouteDetailActivity</string>
    <string name="NA">Details not available</string>

</resources>
