<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_advisory" android:icon="@mipmap/ic_action_report_problem"
            android:title="@string/advisory" />
        <item android:id="@+id/nav_elevator" android:icon="@mipmap/ic_communication_import_export"
            android:title="@string/elevator" />
        <item android:id="@+id/nav_saved_trip" android:icon="@mipmap/ic_action_assignment"
            android:title="@string/saved_trip" />
        <item android:id="@+id/nav_map" android:icon="@mipmap/ic_maps_place"
            android:title="@string/map" />
        <item android:id="@+id/nav_count" android:icon="@mipmap/ic_maps_directions_subway"
            android:title="@string/count" />
        <item android:id="@+id/nav_holiday" android:icon="@mipmap/ic_image_nature_people"
            android:title="@string/holiday" />


    </group>


</menu>