<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_station_info"
    tools:context="com.gkudva.bart.Activities.StationInfoActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/NA"
        android:id="@+id/tvStationName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvStationAddress"
        android:layout_below="@+id/tvStationName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/parking"
        android:id="@+id/tvParkingInfoHeader"
        android:layout_below="@+id/tvStationAddress"
        android:layout_alignLeft="@+id/tvStationName"
        android:layout_alignStart="@+id/tvStationName"
        android:layout_marginTop="26dp"
        android:background="@drawable/rect_box"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvParkingInfo"
        android:layout_below="@+id/tvParkingInfoHeader"
        android:layout_alignStart="@+id/tvParkingInfoHeader"
        android:layout_alignLeft="@+id/tvParkingInfoHeader"
        android:autoLink="all"
        android:maxLines="3"
        android:ellipsize="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_fill_info"
        android:id="@+id/tvParkingFillInfo"
        android:layout_below="@+id/tvParkingInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvParkingFillTime"
        android:layout_below="@+id/tvParkingInfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bike"
        android:id="@+id/tvBikesHeader"
        android:layout_below="@+id/tvParkingFillInfo"
        android:layout_alignLeft="@+id/tvStationName"
        android:layout_alignStart="@+id/tvStationName"
        android:layout_marginTop="36dp"
        android:background="@drawable/rect_box"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_racks"
        android:id="@+id/tvBikeRacksHeader"
        android:layout_below="@+id/tvBikesHeader"
        android:layout_alignLeft="@+id/tvBikesHeader"
        android:layout_alignStart="@+id/tvBikesHeader"
        android:textStyle="bold"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvBikeRacks"
        android:layout_below="@+id/tvBikesHeader"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_station"
        android:id="@+id/tvBikeStationHeader"
        android:layout_below="@+id/tvBikeRacksHeader"
        android:layout_alignLeft="@+id/tvBikesHeader"
        android:layout_alignStart="@+id/tvBikesHeader"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvBikeStation"
        android:layout_below="@+id/tvBikeRacks"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bike_lockers"
        android:id="@+id/tvBikeLockerHeader"
        android:layout_below="@+id/tvBikeStationHeader"
        android:layout_alignLeft="@+id/tvBikesHeader"
        android:layout_alignStart="@+id/tvBikesHeader"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvBikeLocker"
        android:layout_below="@+id/tvBikeStation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/transit_info"
        android:id="@+id/tvTransitInfoHeader"
        android:layout_below="@+id/tvBikeLockerHeader"
        android:layout_alignLeft="@+id/tvStationName"
        android:layout_alignStart="@+id/tvStationName"
        android:layout_marginTop="36dp"
        android:background="@drawable/rect_box"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:id="@+id/tvTransitInfo"
        android:layout_below="@+id/tvTransitInfoHeader"
        android:layout_alignStart="@+id/tvTransitInfoHeader"
        android:layout_alignLeft="@+id/tvTransitInfoHeader"
        android:ellipsize="end"
        android:maxLines="2" />

</RelativeLayout>
