<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:id="@+id/tvFrom"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"

        android:textSize="15dp"
        android:layout_alignParentTop="true" />

    <Spinner
        android:id="@+id/spFrom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:entries="@array/station"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/tvTo"
        android:layout_alignLeft="@+id/tvFrom"
        android:layout_alignStart="@+id/tvFrom"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/tvFrom"
        android:textSize="15dp"/>

    <Spinner
        android:id="@+id/spTo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spFrom"
        android:layout_alignStart="@+id/spFrom"
        android:entries="@array/station"
        android:layout_below="@+id/spFrom"
        android:paddingTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:id="@+id/tvSchedule"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/tvTo"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />


    <View
        android:layout_width="fill_parent"
        android:layout_below="@+id/tvSchedule"
        android:id="@+id/vLine"
        android:layout_height="2dp"
        android:background="@color/colorBlack"
        android:paddingLeft="10dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/lvSchedule"
        android:layout_below="@+id/vLine"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/spTo"
        android:layout_alignEnd="@+id/spTo" />




</RelativeLayout>
